--- a/FinalProjectWebsite/index.html
+++ b/FinalProjectWebsite/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" 
-  <!--Let browser know website is optimized for mobile-->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"> 
+  <!-- Let browser know website is optimized for mobile -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!--Import materialize.css-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
@@ -16,8 +16,8 @@
 <body>
   <header>
     <h1><strong>
-      <center><strong>A Tribute to Keren Hajioff</center></strong>
-        <h4><center>From Lone Soldier</center></h4> 
+      <center>A Tribute to Keren Hajioff</center>
+        <h4><center>From a Lone Soldier</center></h4> 
         <h4><center>to GenZ Social Media Innovator for the IDF</center></h4>         
         <h4><center>to Senior Advisor of Two Israeli Prime Ministers</center></h4>
   </header>
@@ -38,7 +38,7 @@
             </footer>
           </blockquote>
          
-            <p>Federation of Zionist Youth Gap Year Program that became the Rest of her Life in the Home of the Jews, Israel</p>
+            <p>Federation of Zionist Youth Gap Year Program that became the Rest of Her Life in the Home of the Jews, Israel</p>
           
       <h6><b>Army Service of Thirteen Illustrious Years</b></h6>
           <p>Keren as a Lone Soldier</p>
